<resources>
    <string name="app_name">Plz Stop</string>
    <string name="move_to_search">검색 화면으로 이동하기</string>
    <string name="move_to_route">경로 검색 화면으로 이동</string>
    <string name="expected_depart_time">예상 출발 시간: </string>
    <string name="expected_arrival_time">예상 도착 시간: </string>
    <string name="required_hour">시간&#160;&#160;</string>
    <string name="required_minute">분</string>
    <string name="not_yet_implemented">미구현</string>
    <string name="bookmark">즐겨찾기 추가</string>
    <string name="start_location">출발지</string>
    <string name="end_location">도착지</string>
    <string name="favorite_text">즐겨찾기</string>
    <string name="current_location_text">현재 위치</string>
    <string name="select_map_text">지도에서 선택</string>
    <string name="distance_km">%1$skm</string>
    <string name="mission_close_image_view_description">미션 종료 버튼입니다.</string>
    <string name="minute_and_second">%1$s:%2$s</string>
    <string name="number_format">%1$s%2$d</string>
    <string name="route_text">경로</string>
    <string name="alarm_method_text">알람 방식</string>
    <string name="wave_text">진동</string>
    <string name="sound_text">소리</string>
    <string name="last_transport_arrival_time">막차 도착 예정 시간 :\n%1$s</string>
    <string name="last_transport_walking_time">정류장까지의 예상 도보 시간 :\n%1$d분</string>
    <string name="alarm_time_text">막차시간%1$d분 전에\n알람이 울리도록\n설정하시겠습니까?</string>
    <string name="register_alarm_text">알람 등록</string>
    <string name="search_hint">장소, 주소 검색</string>
    <string name="expected_last_arrival_time">막차 도착 예정 시간</string>
    <string name="mission_start">미션 시작</string>
    <string name="quit">종료</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="no_start_input">출발지를 입력해 주세요</string>
    <string name="no_end_input">도착지를 입력해 주세요</string>
    <string name="km">km</string>
    <string name="non_exist_alarm">현재 등록된 막차 알림이 없습니다</string>
    <string name="exist_alarm">드래그하여 등록된 막차 알림을 확인할 수 있습니다</string>
    <string name="alarm_turn_off_text">알람 해제</string>
    <string name="alarm_delete_text">알람 삭제</string>
    <string name="recent_search_text">최근 검색 기록</string>
    <string name="delete_recent_search_text">최근 검색 기록 삭제</string>
    <string name="notification_channel_id">notification_channel_id</string>
    <string name="notification_channel_name">notification_channel_name</string>
    <string name="notification_channel_high_id">notification_channel_high_id</string>
    <string name="notification_channel_high_name">notification_channel_high_name</string>
    <string name="notification_title">막차 알람</string>
    <string name="alarm_cancel_text">취소하기</string>
    <string name="alarm_content_text">막차 왔어요~!!</string>
    <string name="mission_notification_channel_id">mission_notification_channel_id</string>
    <string name="mission_notification_channel_name">mission_notification_channel_name</string>
    <string name="mission_notification_title">실시간 위치 트래킹 중</string>
    <string name="mission_cancel_text">취소하기</string>
    <string name="mission_content_text">정류장까지 달려~!</string>
    <string name="no_alarm">현재 등록된 막차 알림이 없습니다.</string>
    <string name="alarm_setting">알람 설정</string>
    <string name="now_last_time">현재 막차</string>
    <string name="start">출발지</string>
    <string name="end">도착지</string>
    <string name="section_time">%1$s분</string>
    <string name="route_result_not_exist">경로 검색 결과가 존재하지 않습니다</string>
    <string name="transport_last_time_is_not_received_yet">막차 시간 데이터가 입력되지 않았습니다.</string>
    <string name="available_train_no_exist_yet">탑승할 수 있는 지하철이 아직 없습니다.</string>
    <string name="api_changed">개발 당시의 API 명세와 다른 값이 들어왔습니다.</string>
    <string name="available_bus_no_exist_yet">탑승할 수 있는 버스가 아직 없습니다.</string>
    <string name="bus_disappear_suddenly">버스가 갑자기 사라졌습니다.</string>
    <string name="mission_something_wrong">미션 진행 중 무언가 잘못되었습니다.</string>
    <string name="image_view_research_content_description">경로를 재검색합니다.</string>
    <string name="image_view_swap_origin_with_destination_content_description">출발지와 도착지를 바꿉니다.</string>
    <string name="image_view_exit_content_description">경로 검색 화면을 종료합니다.</string>
    <string name="image_view_icon_content_description">승차지의 종류를 나타내는 아이콘입니다.</string>
    <string name="loading_text">Loading..</string>
    <string name="recent_search_no_data_tet">최근 검색 기록이 없습니다</string>
    <string name="start_position">출발지</string>
    <string name="end_position">도착지</string>
    <string name="last_time">막차 시간</string>
    <string name="expect_walk_time">예상 도보 시간</string>
    <string name="route_type_image_content_description">대중 교통의 종류를 나타내는 이미지입니다.</string>
    <string name="start_position_text">출발지 : %1$s</string>
    <string name="end_position_text">도착지 : %1$s</string>
    <string name="last_time_text">막차시간 : %1$s</string>
    <string name="walk_time_text">%1$d분</string>
    <string name="socket_timeout_exception_please_retry">API 서버가 응답하지 않습니다. 다시 시도해주세요.</string>
    <string name="unknown_exception_occur">알 수 없는 에러가 발생했습니다.</string>
    <string name="unknown_host_exception_occur">인터넷이 연결되어 있지 않거나, 페쇄망 호스트에 연결을 시도했습니다.</string>
    <string name="alarm_last_notification_text">알람이 %1$s의 %2$s분 전에 울릴 예정입니다.</string>
    <string name="last_time_not_found">알람을 설정할 수 없습니다</string>
    <string name="minute_before">분 전</string>
    <string name="option_setting">옵션 설정</string>
    <string name="ongoing_mission">진행중인 미션이 있습니다</string>
</resources>