<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.alarmstart.AlarmStartFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_begin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_middle_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_middle_mission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9"/>

    <TextView
        android:id="@+id/text_view_destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_top"
        tools:text="4호선 인덕원역"/>

    <View
        android:id="@+id/view_bar"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/light_grey"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/text_view_destination"
        app:layout_constraintStart_toStartOf="@id/guideline_begin"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"/>

    <TextView
        android:id="@+id/text_view_arrival_time_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:text="@string/expected_last_arrival_time"
        app:layout_constraintStart_toStartOf="@id/guideline_begin"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintTop_toBottomOf="@id/guideline_middle_alarm"/>

    <TextView
        android:id="@+id/text_view_arrival_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="70sp"
        android:textColor="@color/black"
        android:letterSpacing="0.05"
        android:includeFontPadding="false"
        app:layout_constraintStart_toStartOf="@id/guideline_begin"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintTop_toBottomOf="@id/text_view_arrival_time_description"
        tools:text="23 : 51"/>

    <TextView
        android:id="@+id/text_view_estimated_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/guideline_begin"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintTop_toBottomOf="@id/text_view_arrival_time"
        tools:text="정류장까지 예상 도보 시간 00:12"/>

    <TextView
        android:id="@+id/text_view_mission_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:text="@string/mission_start"
        app:layout_constraintStart_toStartOf="@id/guideline_begin"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintTop_toBottomOf="@id/guideline_middle_mission"/>

    <TextView
        android:id="@+id/text_view_alarm_quit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:text="@string/quit"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/guideline_begin"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintTop_toBottomOf="@id/text_view_mission_start"/>

    <Button
        android:id="@+id/button_delay_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.Button.ElevatedButton"

        app:layout_constraintStart_toStartOf="@id/guideline_begin"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
        tools:text="1분 후 다시 울림"/>

    <TextView
        android:id="@+id/text_view_delay_alarm_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minus"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        app:layout_constraintEnd_toStartOf="@id/button_delay_alarm"
        app:layout_constraintTop_toTopOf="@id/button_delay_alarm"
        app:layout_constraintBottom_toBottomOf="@id/button_delay_alarm" />

    <TextView
        android:id="@+id/text_view_delay_alarm_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@id/button_delay_alarm"
        app:layout_constraintTop_toTopOf="@id/button_delay_alarm"
        app:layout_constraintBottom_toBottomOf="@id/button_delay_alarm" />

</androidx.constraintlayout.widget.ConstraintLayout>